<resources>
  <string name="API_KEY">U2FsdGVkX1+Hq3T9LTCtwzdfR0WglwHbFJRxvftNE2bpFBkMxQ7BBZ2vhkEwqrfI</string>
  <string name="ModeCategoryTitle">Modes</string>
  <string name="WRRK">weatherRefreshRateKey2</string>
  <string name="WRRK2">refresh_rate_minutes</string>
  <string name="Weather">Live location and weather</string>
  <string name="a_new_update_is_ready_to_install">A new update is ready to install.</string>
  <string name="abc_action_bar_home_description">Navigate home</string>
  <string name="abc_action_bar_up_description">Navigate up</string>
  <string name="abc_action_menu_overflow_description">More options</string>
  <string name="abc_action_mode_done">Done</string>
  <string name="abc_activity_chooser_view_see_all">See all</string>
  <string name="abc_activitychooserview_choose_application">Choose an app</string>
  <string name="abc_capital_off">OFF</string>
  <string name="abc_capital_on">ON</string>
  <string name="abc_menu_alt_shortcut_label">Alt+</string>
  <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
  <string name="abc_menu_delete_shortcut_label">delete</string>
  <string name="abc_menu_enter_shortcut_label">enter</string>
  <string name="abc_menu_function_shortcut_label">Function+</string>
  <string name="abc_menu_meta_shortcut_label">Meta+</string>
  <string name="abc_menu_shift_shortcut_label">Shift+</string>
  <string name="abc_menu_space_shortcut_label">space</string>
  <string name="abc_menu_sym_shortcut_label">Sym+</string>
  <string name="abc_prepend_shortcut_label">Menu+</string>
  <string name="abc_search_hint">Search…</string>
  <string name="abc_searchview_description_clear">Clear query</string>
  <string name="abc_searchview_description_query">Search query</string>
  <string name="abc_searchview_description_search">Search</string>
  <string name="abc_searchview_description_submit">Submit query</string>
  <string name="abc_searchview_description_voice">Voice search</string>
  <string name="abc_shareactionprovider_share_with">Share with</string>
  <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
  <string name="abc_toolbar_collapse_description">Collapse</string>
  <string name="aboutMeKey">aboutMe</string>
  <string name="aboutThisAppKey0">aboutThisApp0</string>
  <string name="aboutThisAppKey1">aboutThisApp1</string>
  <string name="about_changelog">Changelog</string>
  <string name="action_bar_height">action_bar_height</string>
  <string name="action_bar_key">action_bar_Key</string>
  <string name="advancedSettingsBatterySaver">Power saving</string>
  <string name="advancedSettingsBatterySaverCategoryTitle">Advanced settings - Power saving</string>
  <string name="advancedSettingsKey">advancedSettingsKey</string>
  <string name="advancedSettingsScrolling">Scrolling</string>
  <string name="advancedSettingsScrollingCategoryTitle">Advanced settings - Scrolling</string>
  <string name="advanced_settings_blur_luminosity_description1">Adjust the blur strength</string>
  <string name="advanced_settings_blur_luminosity_description2">Experimental feature. May increase battery usage</string>
  <string name="advanced_settings_blur_luminosity_title">Blur</string>
  <string name="advanced_settings_center_haven_description">Always re-center the scene when returning to the home screen</string>
  <string name="advanced_settings_center_haven_title">Center Scene</string>
  <string name="advanced_settings_color_title">Colors</string>
  <string name="advanced_settings_dim_luminosity_description">Adjust the scene luminosity</string>
  <string name="advanced_settings_dim_luminosity_title">Luminosity dimmer</string>
  <string name="advanced_settings_dim_scene_title">Scene</string>
  <string name="advanced_settings_night_darkness_description">Adjust the darkness level at night</string>
  <string name="advanced_settings_night_darkness_title">Night Darkness</string>
  <string name="advanced_settings_saturation_description">Adjust the intensity of colors</string>
  <string name="advanced_settings_saturation_title">Color Saturation</string>
  <string name="advanced_settings_tree_amount_description">Control how many trees are displayed</string>
  <string name="advanced_settings_tree_amount_title">Tree Density</string>
  <string name="am">AM</string>
  <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
  <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
  <string name="androidx_compose_foundation_autofill">Autofill</string>
  <string name="androidx_compose_ui_autofill">Autofill</string>
  <string name="androidx_startup">androidx.startup</string>
  <string name="appVersion">0.102.7</string>
  <string name="app_description">This app is lovingly developed by a solo dev who values quality and user respect. That means: 

 No ads 
 No selling your data 
 No shady practices 

Every line of code and every animation is handcrafted, with the goal of offering you a calming, beautiful wallpaper experience that changes throughout the day, just like real life. 

 The app is evolving over time, and new features or changes may appear based on user feedback, but always at the developer’s own discretion. This is a personal project, not a corporate product. 

Your support helps keep this indie project alive, and lets it grow into something even better. 

Thank you for being part of the journey!</string>
  <string name="app_name">Chill Live Wallpaper</string>
  <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
  <string name="astro">astro</string>
  <string name="astronomy">astronomy</string>
  <string name="atLocation">Location </string>
  <string name="autoBatterySaverKey">autoBatterySaverKey</string>
  <string name="autoBatterySaverSeekKey">autoBatterySaverSeekKey</string>
  <string name="autoBatterySaverSummary">Automatically disables all animations when battery falls below the level set by the slider below</string>
  <string name="autoBatterySaverTitle">Automatic mode</string>
  <string name="bar">bar</string>
  <string name="batterySaverKey">batterySaverKey</string>
  <string name="batterySaverSummary">Disable all animations to save battery</string>
  <string name="batterySaverTitle">Manual mode</string>
  <string name="battery_percentage">Battery percentage</string>
  <string name="batterymanager_not_available">checkBatteryLevel: BatteryManager not available.</string>
  <string name="become_p">Start Your Chill Experience Now!</string>
  <string name="become_u">Start Now!</string>
  <string name="bitmapRenderer">BitmapRenderer</string>
  <string name="blizzard">Blizzard</string>
  <string name="blowing_snow">Blowing snow</string>
  <string name="blurKey">blurKeyInt</string>
  <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
  <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
  <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
  <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
  <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
  <string name="buildingClass">BuildingCLass</string>
  <string name="buttonContact">Contact</string>
  <string name="buttonStore">Store</string>
  <string name="c">c</string>
  <string name="c_p_d">BEST VALUE</string>
  <string name="c_p_lt_b_l">Unlock Forever</string>
  <string name="c_p_lt_sum_l">Pay once, keep everything</string>
  <string name="c_p_lt_sum_ul">Your Chill Pass is active! Thank you! 
All landscapes + Dynamic Weather, 1 hour updates</string>
  <string name="c_p_lt_t">Lifetime Chill Pass</string>
  <string name="c_p_lt_tt">A Lifetime of Chill for the Early Users</string>
  <string name="c_p_sum">Does not include Real-Time Weather Pro</string>
  <string name="c_p_t">Chill Pass</string>
  <string name="c_p_u_sum">
• All landscapes 
• Real-Time Weather Pro, 5 minutes updates
</string>
  <string name="c_p_u_t">Ultimate Chill Pass</string>
  <string name="c_p_u_t_lt">Lifetime Ultimate Chill Pass</string>
  <string name="call_notification_answer_action">Answer</string>
  <string name="call_notification_answer_video_action">Video</string>
  <string name="call_notification_decline_action">Decline</string>
  <string name="call_notification_hang_up_action">Hang Up</string>
  <string name="call_notification_incoming_text">Incoming call</string>
  <string name="call_notification_ongoing_text">Ongoing call</string>
  <string name="call_notification_screening_text">Screening an incoming call</string>
  <string name="cancel_button">Cancel</string>
  <string name="center_haven_key">center_haven_key</string>
  <string name="chTitle">Celestial Haven</string>
  <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
  <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
  <string name="character_counter_pattern">%1$d/%2$d</string>
  <string name="chillHillsTitle">Chill Hills</string>
  <string name="choose_location_method">Choose how you’d like to set your location. You can use GPS to detect it automatically, or enter it manually.</string>
  <string name="city_name">City name</string>
  <string name="clear">Clear</string>
  <string name="clear_text_end_icon_content_description">Clear text</string>
  <string name="clock">clock</string>
  <string name="close_drawer">Close navigation menu</string>
  <string name="close_sheet">Close sheet</string>
  <string name="cloud">cloud</string>
  <string name="cloudCoverKey">cloudCoverKey</string>
  <string name="cloudCoverTitle">Cloud cover</string>
  <string name="cloudPercentage">cloudPercentage</string>
  <string name="d_w_b_l">Unlock Forever</string>
  <string name="d_w_sum_l">Basic Weather Sync · 1 Hour Update</string>
  <string name="d_w_title">Dynamic Weather</string>
  <string name="email_me">Contact me</string>
  <string name="email_me_sub">Send an email to the developer</string>
  <string name="english">English</string>
  <string name="feedback">This app is developed by a solo dev, inspired directly by user feedback. Your support help shape the future of this project, ensuring it gets better with every update. 

For support, bug reports, or suggestions, please contact me, I read every message! 
For bugs, please check the help section on the main page!</string>
  <string name="five_minute">5 min</string>
  <string name="four_hours">4 hours</string>
  <string name="french">Français</string>
  <string name="japanese">日本語</string>
  <string name="l_wr_title">Dynamic Weather</string>
  <string name="language_description">Only a few language packs are currently available, but more are on the way. You can help translate the app! Contact me if you wish to help.</string>
  <string name="one_hour">1 hour</string>
  <string name="p_summary_l">• All landscapes 
• Dynamic Weather, 1 hour updates</string>
  <string name="price_lt">PRICE</string>
  <string name="rate_me">Rate me on the Google Play Store</string>
  <string name="rate_me_sub">Support the development</string>
  <string name="refresh_rate_title">Weather Update Frequency</string>
  <string name="set_language_button">Set Language</string>
  <string name="set_your_language">Set Your Language</string>
  <string name="share">Share the app</string>
  <string name="share_sub">Tell your friends</string>
  <string name="thirty_minutes">30 mins</string>
  <string name="three_hours">3 hours</string>
  <string name="toolbar_hide">Hide</string>
  <string name="toolbar_landscapes">Scenes</string>
  <string name="toolbar_toggle">Effects</string>
  <string name="trad_zh">繁體中文</string>
  <string name="two_hours">2 hours</string>
  <string name="visit_store">Visit the Play Store page</string>
  <string name="visit_store_sub">Learn more about the app</string>
  <string name="weatherCategoryTitle">Weather</string>
</resources>