<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout android:gravity="center_horizontal"
              android:orientation="vertical"
              android:id="@id/card_weather_sync"
              android:background="@drawable/bg_card_default"
              android:padding="@dimen/short_margin"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android">
  <TextView android:textSize="14.0sp"
            android:id="@id/tv_weather_sync_title"
            android:layout_width="wrap_content"
            android:text="@string/d_w_title"
            style="@style/Widget.Chill.TextView.ListItem.Title.Bold" />
  <TextView android:textSize="14.0sp"
            android:id="@id/tv_weather_sync_price"
            android:layout_width="wrap_content"
            android:text="@string/price_lt"
            style="@style/Widget.Chill.TextView.ListItem.Title.Bold" />
  <TextView android:textSize="12.0sp"
            android:id="@id/tv_weather_sync_detail"
            android:layout_width="wrap_content"
            android:text="@string/d_w_sum_l"
            android:textAlignment="center"
            style="@style/Widget.Chill.TextView.ListItem.Title.Bold" />
  <Button android:textSize="13.0sp"
          android:layout_gravity="center"
          android:id="@id/unlock_l_w_button"
          android:layout_width="fill_parent"
          android:layout_marginTop="@dimen/short_margin"
          android:text="@string/d_w_b_l"
          android:textAlignment="center"
          android:backgroundTint="#b0b0b0"
          style="@style/Widget.Chill.TextView.ListItem.Title.Bold" />
</LinearLayout>