<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout android:gravity="center"
              android:orientation="vertical"
              android:background="@drawable/bg_card_highlight_2"
              android:padding="@dimen/layout_margins"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android">
  <TextView android:textSize="20.0sp"
            android:id="@id/tv_title_ultimate"
            android:layout_width="wrap_content"
            android:text="@string/c_p_u_t"
            style="@style/Widget.Chill.TextView.ListItem.Title.Bold" />
  <TextView android:textSize="14.0sp"
            android:layout_gravity="start"
            android:id="@id/ul_c_u_p_sum"
            android:layout_width="wrap_content"
            android:text="@string/c_p_u_sum"
            style="@style/Widget.Chill.TextView.ListItem.Title.Bold" />
  <TextView android:textSize="18.0sp"
            android:id="@id/tv_price_ultimate_sub"
            android:layout_width="wrap_content"
            android:text="@string/become_u"
            style="@style/Widget.Chill.TextView.ListItem.Title.Bold" />
  <Button android:layout_gravity="center"
          android:id="@id/ul_cp_u_button"
          android:layout_width="fill_parent"
          android:text="@string/become_u"
          android:textAlignment="center"
          android:backgroundTint="@color/l_w_button_color_day"
          style="@style/Widget.Chill.TextView.ListItem.Title.Bold" />
  <Button android:textColor="@color/white"
          android:layout_gravity="center"
          android:id="@id/ul_u_lt_button"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/c_p_lt_b_l"
          android:textAlignment="center"
          android:backgroundTint="@color/r_t_w_button_color_day2"
          style="@style/Widget.Chill.TextView.ListItem.Title.Bold" />
  <Button android:textColor="@color/white"
          android:layout_gravity="center"
          android:id="@id/ul_upg_lt_button"
          android:visibility="gone"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/c_p_lt_b_l"
          android:textAlignment="center"
          android:backgroundTint="@color/r_t_w_button_color_day2"
          style="@style/Widget.Chill.TextView.ListItem.Title.Bold" />
</LinearLayout>